Skills and Contact start

--- a/index.html
+++ b/index.html
@@ -62,12 +62,95 @@
                 <div class="skills-content">
                     <div class="column left">
                         <div class="text">My Coursework</div>
-                        <ul style="list-style-type: circle" class="list">
-                        <li>Mobile Computing for Android</li>
+                        <ul  class="list">
+                        <li>Programmin for Mobile Computing</li>
+                        <li>Net-Centric Introduction to Computing</li>
+                        <li>Computer Organisation</li>
+                        <li>Fundamentals of Data Structures</li>
+                        <li>Software Tools</li>
+                        <li>Discrete Mathematics for Computer Science</li>
+                        <li>Introduction to Logic for Computer Science</li>
+                        <li>Introduction to Theory of Computation</li>
                         </ul>
                     </div>
+                    <div class="column right">
+                        <div class="chip">
+                            <div class="skill">
+                                    <div class="text">Technical Skills</div>
+                                        <ul class="skillset" id="line1">
+                                            <li id="sk">HTML</li>
+                                             <li id="sk">CSS</li>
+                                            <li id="sk">Javascript</li>
+                                            <li id="sk">Java</li>
+                                            <li id="sk">C++</li>
+                                            <li id="sk">C</li>
+                                            <li id="sk">GIT</li>
+                                            <li id="sk">Jquery</li>
+                                            <li id="sk">SQL</li>
+                                            <li id="sk">Verilog</li>
+                                            <li id="sk">RISC - V</li>
+                                            <li id="sk">Windows</li>
+                                            <li id="sk">MAC OS</li>
+                                            <li id="sk">Linux</li>
+                                            <li id="sk">MS Offics</li>
+                                            <li id="sk">Visual Studio Code</li>
+                                            <li id="sk">Android Studio</li>
+                                            <li id="sk">Eclipse</li>
+                                        </ul>
+                                     <div class="text">Soft Skills</div>
+                                        <ul class="skillset" id="line2">
+                                            <li id="sk">Leadership</li>
+                                            <li id="sk">Active Listener</li>
+                                            <li id="sk">Efficient Communication</li>
+                                            <li id="sk">Creativity</li>
+                                            <li id="sk">Time Management</li>
+                                            <li id="sk">Quick Learner</li>
+                                            <li id="sk">Collaborative approach</li>
+                                            <li id="sk">Multilingual</li>
+                                        </ul>
+                                </div>
+                            </div>
+                        </div>
                 </div>
 
+            </div>
+        </section>
+
+
+
+<!-- About section starting -->
+        <section class="contact" id="contact">
+            <div class="max-width">
+                <h2 class="title">Contact Me</h2>
+                    <div class="contact-content">
+                            <div class="column left">
+                                    <div class="text">Get in Touch! </div>
+                                    <p>Hi Hello lets get in touch</p>
+                                    <div class="icons">
+                                        <div class="row">
+                                            <i class="fas fa-user"></i>
+                                            <div class="info">
+                                                <div class="head">Name</div>
+                                                <div class="sub-title">Keshav Narain Gainda </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                                <i class="fas fa-map-marker-alt"></i>
+                                                <div class="info">
+                                                    <div class="head">Address</div>
+                                                    <div class="sub-title">Toronto,ON, Canada </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                    <i class="fas fa-envelope"></i>
+                                                    <div class="info">
+                                                        <div class="head">Email</div>
+                                                        <div class="sub-title">gaindakeshav@gmail.com</div>
+                                                    </div>
+                                                </div> 
+                                    </div>
+                                </div>
+                    </div>
             </div>
         </section>
 
