--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Keshav Gainda Portfolio</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script  src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
     </head>
@@ -14,10 +15,10 @@
             <div class="max-width">
                 <div class = "logo"><a href="#">KN<span>Gainda</a></span></div>
                 <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class = "menu-btn">
                         <i class="fa fa-bars"></i>
@@ -29,9 +30,9 @@
         <section class="home" id="home">
             <div class="max-width">
                 <div class="home-content">
-                    <div class="text1">Hello, My name is</div>
+                    <!-- <div class="text1">Seeking Co-op Position for Fall 2021</div> -->
                     <div class="text2">Keshav Narain Gainda</div>
-                    <div class="text3">And I'm a <span>Student</span></div>
+                    <div class="text3">And I'm a <span class="typing"></span></div>
                 </div>
             </div>
         </section>
@@ -42,14 +43,14 @@
                     <h2 class="title">About Me </h2>
                     <div class="about-content">
                         <div class="column left">
-                            <img src="profile.png" alt=" ">
+                            <img src="remove.png" alt=" ">
                         </div>
                         <div class="column right">
-                            <div class="text">I'm Keshav and I'm a <span>Student</span></div>
+                            <div class="text">I'm Keshav and I'm a <span class = "typing-2"></span></div>
                             <p>
                                    Inquisitive, energetic, and a hardworking student pursuing Bachelors degree in the field of Computer Science at York University, Toronto, Canada. An aspiring software developer with a strong foundation in Math, Programming logic, and cross-platform coding. Seeking to leverage solid development skills with a focus on collaboration, communication, passion and creativity as a Programmer.
                             </p>
-                            <a href="#">Download CV</a>
+                            <a href="KeshavNGainda.pdf" download="KeshavGainda">Download CV</a>
                         </div>
                     </div>
                 </div>
@@ -118,7 +119,7 @@
 
 
 
-<!-- About section starting -->
+<!-- Contact section starting -->
         <section class="contact" id="contact">
             <div class="max-width">
                 <h2 class="title">Contact Me</h2>
@@ -147,13 +148,40 @@
                                                         <div class="head">Email</div>
                                                         <div class="sub-title">gaindakeshav@gmail.com</div>
                                                     </div>
-                                                </div> 
+                                            </div> 
                                     </div>
                                 </div>
+                                    <div class = "column right">
+                                        <div class="text">Message Me</div>
+                                        <form action = "#">
+                                            <div class="fields">
+                                                <div class="field name">
+                                                    <input type = "text" placeholder="Name" required>
+                                                </div>
+                                                <div class="field email">
+                                                    <input type = "email" placeholder="Email" required>
+                                                </div>
+                                            </div>
+                                            <div class="field">
+                                                    <input type = "text" placeholder="Subject" required>
+                                            </div>
+                                            <div class="field textarea">
+                                                    <textarea cols="30" rows="10" placeholder="Describe project.." required></textarea>
+                                            </div>
+                                            <div class="button">
+                                                    <a href="mailto:gaindakeshav@gmail.com"><button type="submit">Send Message</button></a>
+                                            </div>
+                                        </form>
+                                    </div>
+                              
                     </div>
             </div>
         </section>
 
+    <!-- Footer section starts -->
+        <footer>
+            <span>Created by | Keshav Narain Gainda</span>
+        </footer>
         
         <script src = "script.js"></script>
 
