--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script  src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://raw.githubusercontent.com/mattboldt/typed.js/master/js/typed.js" type="text/javascript"></script>
     </head>
     <body>
         <nav class="navbar">
@@ -64,7 +65,7 @@
                     <div class="column left">
                         <div class="text">My Coursework</div>
                         <ul  class="list">
-                        <li>Programmin for Mobile Computing</li>
+                        <li>Programming for Mobile Computing</li>
                         <li>Net-Centric Introduction to Computing</li>
                         <li>Computer Organisation</li>
                         <li>Fundamentals of Data Structures</li>
@@ -125,8 +126,8 @@
                 <h2 class="title">Contact Me</h2>
                     <div class="contact-content">
                             <div class="column left">
-                                    <div class="text">Get in Touch! </div>
-                                    <p>Hi Hello lets get in touch</p>
+                                    <div class="text"></div>
+                                    <!-- <p>Hi Hello lets get in touch</p> -->
                                     <div class="icons">
                                         <div class="row">
                                             <i class="fas fa-user"></i>
@@ -153,7 +154,7 @@
                                 </div>
                                     <div class = "column right">
                                         <div class="text">Message Me</div>
-                                        <form action = "#">
+                                        <form action = "mailto:gaindakeshav@gmail.com">
                                             <div class="fields">
                                                 <div class="field name">
                                                     <input type = "text" placeholder="Name" required>
