--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script  src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="https://rawgithub.com/mattboldt/typed.js/master/js/typed.js" type="text/javascript"></script>
+        <link src="js/typed.custom.js" type="text/javascript">
+        <script src="js/typed.custom.js" type="text/javascript"></script>       
     </head>
     <body>
         <nav class="navbar">
