--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width = device-width, initial-scale = 1.0">
         <title>Keshav Gainda Portfolio</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg></script>
         <link rel="stylesheet" href="style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script  src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <link src="js/typed.custom.js" type="text/javascript">
-        <script src="js/typed.custom.js" type="text/javascript"></script>       
+        <script src="cdn.rawgit.com/mattboldt/typed.js/master/lib/typed.min.js"></script>      
     </head>
     <body>
         <nav class="navbar">
@@ -131,21 +131,21 @@
                                     <!-- <p>Hi Hello lets get in touch</p> -->
                                     <div class="icons">
                                         <div class="row">
-                                            <i class="fas fa-user"></i>
+                                            <i class="fas fa-user fa-2x" id="icon"></i>
                                             <div class="info">
                                                 <div class="head">Name</div>
                                                 <div class="sub-title">Keshav Narain Gainda </div>
                                             </div>
                                         </div>
                                         <div class="row">
-                                                <i class="fas fa-map-marker-alt"></i>
+                                                <i class="fas fa-map-marker-alt fa-2x" id="icon"></i>
                                                 <div class="info">
                                                     <div class="head">Address</div>
                                                     <div class="sub-title">Toronto,ON, Canada </div>
                                                 </div>
                                             </div>
                                             <div class="row">
-                                                    <i class="fas fa-envelope"></i>
+                                                    <a href="mailto:gaindakeshav@gmail.com"><i class="fas fa-envelope fa-2x" id="icon"></i></a>
                                                     <div class="info">
                                                         <div class="head">Email</div>
                                                         <div class="sub-title">gaindakeshav@gmail.com</div>
@@ -154,8 +154,8 @@
                                     </div>
                                 </div>
                                     <div class = "column right">
-                                        <div class="text">Message Me</div>
-                                        <form action = "mailto:gaindakeshav@gmail.com">
+                                        <div class="text">Find me on</div>
+                                        <!-- <form action = "mailto:gaindakeshav@gmail.com">
                                             <div class="fields">
                                                 <div class="field name">
                                                     <input type = "text" placeholder="Name" required>
@@ -173,7 +173,30 @@
                                             <div class="button">
                                                     <a href="mailto:gaindakeshav@gmail.com"><button type="submit">Send Message</button></a>
                                             </div>
-                                        </form>
+                                        </form> -->
+                                        <div class="icons">
+                                            <div class="row">
+                                                <a href="https://www.instagram.com/keshavgainda/"><i class="fab fa-instagram fa-2x" id="icon"></i></a>
+                                                <div class="info">
+                                                    <div class="head">Instagram</div>
+                                                    <div class="sub-title">keshavgainda</div>
+                                                </div>
+                                            </div>
+                                            <div class="row">    
+                                                <a href="https://github.com/keshavgainda"><i class="fab fa-github fa-2x" id="icon"></i></a>
+                                                    <div class="info">
+                                                        <div class="head">Github</div>
+                                                        <div class="sub-title">gaindakeshav</div>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <a href="https://www.linkedin.com/in/keshav-narain-gainda-855ab8194/"><i class="fab fa-linkedin fa-2x" id="icon"></i></a>
+                                                        <div class="info">
+                                                            <div class="head">LinkedIn</div>
+                                                            <div class="sub-title">Keshav Narain Gainda</div>
+                                                        </div>
+                                                </div> 
+                                        </div>
                                     </div>
                               
                     </div>
@@ -188,4 +211,4 @@
         <script src = "script.js"></script>
 
     </body>
-    </html>
+    </html>  
