--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script  src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="cdn.rawgit.com/mattboldt/typed.js/master/lib/typed.min.js"></script>      
+        <script src="cdn.rawgit.com/mattboldt/typed.js/master/lib/typed.min.js"></script>  
+        <div id="ajaxContent"></div>   
     </head>
     <body>
         <nav class="navbar">
