--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script  src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="cdn.rawgit.com/mattboldt/typed.js/master/lib/typed.min.js"></script>  
+        <!-- <script src="cdn.rawgit.com/mattboldt/typed.js/master/lib/typed.min.js"></script>   -->
+        <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
         <div id="ajaxContent"></div>   
     </head>
     <body>
@@ -35,7 +36,7 @@
                 <div class="home-content">
                     <!-- <div class="text1">Seeking Co-op Position for Fall 2021</div> -->
                     <div class="text2">Keshav Narain Gainda</div>
-                    <div class="text3">And I'm a <span class="typing"></span></div>
+                    <div class="text3">And I'm a <span class="typer" id="main" data-words="Student, Programmer" data-colors="crimson" data-delay="100" data-deleteDelay="1000"></span></div>
                 </div>
             </div>
         </section>
@@ -49,7 +50,7 @@
                             <img src="remove.png" alt=" ">
                         </div>
                         <div class="column right">
-                            <div class="text">I'm Keshav and I'm a <span class = "typing-2"></span></div>
+                            <div class="text">I'm Keshav and I'm a <span class="typer" id="main" data-words="Student, Programmer" data-colors="crimson" data-delay="100" data-deleteDelay="1000"></span></div>
                             <p>
                                    Inquisitive, energetic, and a hardworking student pursuing Bachelors degree in the field of Computer Science at York University, Toronto, Canada. An aspiring software developer with a strong foundation in Math, Programming logic, and cross-platform coding. Seeking to leverage solid development skills with a focus on collaboration, communication, passion and creativity as a Programmer.
                             </p>
