--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <p>
                                    Inquisitive, energetic, and a hardworking student pursuing Bachelors degree in the field of Computer Science at York University, Toronto, Canada. An aspiring software developer with a strong foundation in Math, Programming logic, and cross-platform coding. Seeking to leverage solid development skills with a focus on collaboration, communication, passion and creativity as a Programmer.
                             </p>
-                            <a href="KeshavNGainda.pdf" download="KeshavGainda">Download CV</a>
+                            <a href="KeshavNGainda_New.pdf" download="KeshavGainda">Download CV</a>
                         </div>
                     </div>
                 </div>
